fixed css flicker issue on edit textfield change

--- a/frontend/src/app/project/Components/EditTextField/EditTextField.module.css
+++ b/frontend/src/app/project/Components/EditTextField/EditTextField.module.css
@@ -1,6 +1,7 @@
 .projName{
     display: inline-block;
     font-family: 'Inter', sans-serif;
+    
     font-size: 20px;
     color: white;
     padding-right: 10px;
@@ -15,10 +16,14 @@
     
 }
 .input:focus{
-    
+    box-shadow: 0 0 0 1px white;
     background: transparent;
-              
-    color: inherit;
-  
+    outline: none;
 
+}
+
+
+.editField{
+    display: inline-block;
+    
 }
